# ventasbot

./: .gitignore  DIAGNOSTICO.md  PLANIFICACION.md  PLAN_QR_BNB.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9901c36d3a17_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: webhooks.py
backend/app/bot/: engine.py  tool_handlers.py  tools.py
backend/app/models/: __init__.py  conversation.py  merchant.py  order.py  product.py
backend/app/services/: orders.py  payments.py  whatsapp.py
backend/app/workers/: celery_app.py  tasks.py
backend/scripts/: apply_rls.py  chat.py  seed.py
backend/sql/: rls_policies.sql
docs/: db-schema-plan.md
frontend/: middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  themes.css
frontend/app/(auth)/login/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/catalogo/: actions.ts  page.tsx  product-form.tsx  product-list.tsx
frontend/app/(dashboard)/conversaciones/: conversation-view.tsx  page.tsx
frontend/app/(dashboard)/dashboard/: page.tsx
frontend/app/ui-preview/: page.tsx
frontend/components/: palette-provider.tsx  sidebar.tsx
frontend/components/ui/: button.tsx  combobox.tsx  dialog.tsx  input.tsx  palette-picker.tsx  switch.tsx  theme-toggle.tsx
frontend/lib/: merchant.ts  status.ts  types.ts  utils.ts
frontend/lib/supabase/: client.ts  middleware.ts  server.ts
frontend/public/: manifest.json
(+2 files in other folders)
